Fix dark mode weirdness.

--- a/flowmap/static/css/index.css
+++ b/flowmap/static/css/index.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Noto Sans', sans-serif;
+  background-color: white;
+  color: #333333;
 }
 
 
